@@ -1,10 +1,10 @@
 Package: clustMixType
-Version: 0.2-6
-Date: 2020-04-22
+Version: 0.2-7
+Date: 2020-06-11
 Title: k-Prototypes Clustering for Mixed Variable-Type Data
 Author: Gero Szepannek [aut, cre], Rabea Aschenbruck [aut]
 Maintainer: Gero Szepannek <gero.szepannek@web.de>
-Imports: RColorBrewer
+Imports: RColorBrewer, tibble
 Suggests: testthat
 Description: Functions to perform k-prototypes partitioning clustering for
     mixed variable-type data according to Z.Huang (1998): Extensions to the k-Means
