@@ -18,6 +18,7 @@ importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(tibble,is_tibble)
 importFrom(utils,combn)
 importFrom(utils,head)
 importFrom(utils,tail)
