@@ -1,5 +1,6 @@
-
-clustMixType_0.2-6  2020-05-29  - enable input of tibbles
+clustMixType_0.2-7  2020-06-11  - tibble import added to namespace (ln.107 kprototypes.R) and description 
+clustMixType_0.2-6  2020-05-29  (not built --> v0.2-7)
+				- enable input of tibbles
                                 - fix par(ask="FALSE") into par(ask=FALSE)
                                 - check done: no impact of NAs in predict or clprofiles
 clustMixType_0.2-5  2020-04-22  - fix output for validation indices: k_opt (integer) and index_opt (numeric) instead of named numeric k_opt 
